Add contact details to html

--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <footer>
+        <ul id="contact-details">
+            <li id="github"><a href="https://github.com/AntonyKwok/frogger-game" target="_blank">GitHub</a></li>
+            <li id="website"><a href="http://antonykwok.com" target="_blank">antonykwok.com</a></li>
+        </ul>
+    </footer>
 </body>
 </html>
