Change index.html title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Frogger: A Project By Antony Kwok</title>
+    <title>Frogger Game | Antony Kwok</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
